[gd_scene load_steps=48 format=3 uid="uid://bwddkvm5mtch2"]

[ext_resource type="Script" path="res://pressScene3_5.gd" id="1_dmgtj"]
[ext_resource type="Texture2D" uid="uid://c2n75ywdx865y" path="res://assets/backgrounds/judgesSide.png" id="2_4q846"]
[ext_resource type="Texture2D" uid="uid://ygwl50wjqmvg" path="res://assets/sprites/Rain de Luca (Apollo Justice) - Witness.png" id="3_kuibl"]
[ext_resource type="Texture2D" uid="uid://bhn534hh0wssh" path="res://assets/sprites/judge-sprite.png" id="4_g4pdp"]
[ext_resource type="Texture2D" uid="uid://b5dwq1rgckqxk" path="res://assets/backgrounds/prosecutor-bench.png" id="4_msb8w"]
[ext_resource type="Texture2D" uid="uid://bhxjqckw54ita" path="res://assets/sprites/Ms. Cris (Mia Fey) (1).png" id="5_v1ply"]
[ext_resource type="Texture2D" uid="uid://c786m4q5scs3b" path="res://assets/backgrounds/defense-bench.png" id="5_vhx2a"]
[ext_resource type="Texture2D" uid="uid://dp66xco4vbvku" path="res://assets/sprites/sunny-sprite.png" id="6_it8md"]
[ext_resource type="Texture2D" uid="uid://1l03kq0eie04" path="res://assets/backgrounds/witness-stand.png" id="6_tqgql"]
[ext_resource type="FontFile" uid="uid://c42vn22udh74l" path="res://FOT-ModeMinBLargeStd-R.otf" id="7_aavx3"]
[ext_resource type="Texture2D" uid="uid://cbgex0h8g788y" path="res://assets/ui/cornerButton_unpressed.png" id="8_u0xf0"]
[ext_resource type="PackedScene" uid="uid://bwo7hmrw6dsbj" path="res://inventory/inventory_ui.tscn" id="9_qlslb"]
[ext_resource type="AudioStream" uid="uid://dx6vblsbtd8lw" path="res://audio/blip.mp3" id="10_6vu7c"]
[ext_resource type="AudioStream" uid="uid://co66kk6avp7av" path="res://audio/typewriter.mp3" id="11_ret3y"]
[ext_resource type="AudioStream" uid="uid://wubxj0f2f408" path="res://assets/music/tablebang.mp3" id="15_flbfp"]

[sub_resource type="Animation" id="Animation_6vik3"]
resource_name = "blink"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [4, 7]
}

[sub_resource type="Animation" id="Animation_tg6oo"]
resource_name = "talk"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.9, 1.1, 1.3, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 1, 2, 3, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wwaya"]
_data = {
"blink": SubResource("Animation_6vik3"),
"talk": SubResource("Animation_tg6oo")
}

[sub_resource type="Animation" id="Animation_xnak8"]
resource_name = "Blinking"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 0.7, 0.7001, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 8, 9, 9, 8]
}

[sub_resource type="Animation" id="Animation_x823a"]
resource_name = "Talking"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_sroq2"]
resource_name = "shocked"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 43, 44]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pi1fh"]
_data = {
"Blinking": SubResource("Animation_xnak8"),
"Talking": SubResource("Animation_x823a"),
"shocked": SubResource("Animation_sroq2")
}

[sub_resource type="Animation" id="Animation_ra85v"]
resource_name = "Blinking"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [80]
}

[sub_resource type="Animation" id="Animation_6uo0m"]
resource_name = "Talking"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [80, 81, 82, 83]
}

[sub_resource type="Animation" id="Animation_tdpgy"]
resource_name = "Thinking"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [91]
}

[sub_resource type="Animation" id="Animation_tepf1"]
resource_name = "arrogant"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [112, 113]
}

[sub_resource type="Animation" id="Animation_ctm0k"]
resource_name = "lighthapak"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [110, 111]
}

[sub_resource type="Animation" id="Animation_5qpvx"]
resource_name = "staring"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [112]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p5h4f"]
_data = {
"Blinking": SubResource("Animation_ra85v"),
"Talking": SubResource("Animation_6uo0m"),
"Thinking": SubResource("Animation_tdpgy"),
"arrogant": SubResource("Animation_tepf1"),
"lighthapak": SubResource("Animation_ctm0k"),
"staring": SubResource("Animation_5qpvx")
}

[sub_resource type="Animation" id="Animation_sjpap"]
resource_name = "Blinking"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 3, 2, 3]
}

[sub_resource type="Animation" id="Animation_3m1ap"]
resource_name = "Suspicious_Blinking"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [60]
}

[sub_resource type="Animation" id="Animation_qlcie"]
resource_name = "Suspicious_Talking"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.4001, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1.03526, 1, 1, 1.03526, 1),
"update": 1,
"values": [60, 68, 71, 69, 68, 71]
}

[sub_resource type="Animation" id="Animation_b2ai6"]
resource_name = "Table_Whip"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29, 30]
}

[sub_resource type="Animation" id="Animation_olobw"]
resource_name = "Talking"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.2001, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 1, 4, 0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pgmlq"]
_data = {
"Blinking": SubResource("Animation_sjpap"),
"Suspicious_Blinking": SubResource("Animation_3m1ap"),
"Suspicious_Talking": SubResource("Animation_qlcie"),
"Table_Whip": SubResource("Animation_b2ai6"),
"Talking": SubResource("Animation_olobw")
}

[sub_resource type="Animation" id="Animation_ru1pl"]
resource_name = "Blinking"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}

[sub_resource type="Animation" id="Animation_qhkb8"]
resource_name = "NormalTalk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0001, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [12, 12, 13, 14, 15]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yfpy1"]
_data = {
"Blinking": SubResource("Animation_ru1pl"),
"NormalTalk": SubResource("Animation_qhkb8")
}

[sub_resource type="Animation" id="Animation_wbw64"]
resource_name = "Counter"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [105, 102, 103, 104, 105]
}

[sub_resource type="Animation" id="Animation_vnbgn"]
resource_name = "Grit"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [105]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dg1ca"]
_data = {
"Counter": SubResource("Animation_wbw64"),
"Grit": SubResource("Animation_vnbgn")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g3vyj"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_d8jba"]
texture = ExtResource("8_u0xf0")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_esafq"]
texture = ExtResource("8_u0xf0")
modulate_color = Color(0.836576, 0.711346, 0.605006, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ov68q"]
texture = ExtResource("8_u0xf0")
modulate_color = Color(0.541247, 0.291974, 0.221316, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nm04d"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5owbm"]

[node name="Node2D" type="Node2D"]

[node name="pressScene3_5" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_dmgtj")

[node name="Background" type="TextureRect" parent="pressScene3_5"]
layout_mode = 0
offset_right = 1930.0
offset_bottom = 1091.0
texture = ExtResource("2_4q846")

[node name="WitnessSprite" type="Sprite2D" parent="pressScene3_5/Background"]
position = Vector2(935, 497)
scale = Vector2(1.40612, 1.39698)
texture = ExtResource("3_kuibl")
hframes = 4
vframes = 3
frame = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="pressScene3_5/Background/WitnessSprite"]
libraries = {
"": SubResource("AnimationLibrary_wwaya")
}

[node name="judge_sprite" type="Sprite2D" parent="pressScene3_5"]
position = Vector2(982, 432)
scale = Vector2(1.42768, 1.38911)
texture = ExtResource("4_g4pdp")
hframes = 10
vframes = 5
frame = 3

[node name="judge_sprite_animation" type="AnimationPlayer" parent="pressScene3_5/judge_sprite"]
libraries = {
"": SubResource("AnimationLibrary_pi1fh")
}

[node name="mscris_sprite" type="Sprite2D" parent="pressScene3_5"]
position = Vector2(601, 542)
scale = Vector2(1.51966, 1.48716)
texture = ExtResource("5_v1ply")
hframes = 10
vframes = 14
frame = 110

[node name="AnimationPlayer" type="AnimationPlayer" parent="pressScene3_5/mscris_sprite"]
libraries = {
"": SubResource("AnimationLibrary_p5h4f")
}

[node name="sunny_sprite" type="Sprite2D" parent="pressScene3_5"]
position = Vector2(1312, 520.825)
scale = Vector2(1.64267, 1.58515)
texture = ExtResource("6_it8md")
hframes = 12
vframes = 15

[node name="sunny_sprite_animation" type="AnimationPlayer" parent="pressScene3_5/sunny_sprite"]
libraries = {
"": SubResource("AnimationLibrary_pgmlq")
}

[node name="sunny_sprite_animation2" type="AnimationPlayer" parent="pressScene3_5/sunny_sprite"]
libraries = {
"": SubResource("AnimationLibrary_yfpy1")
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="pressScene3_5/sunny_sprite"]
root_node = NodePath("../sunny_sprite_animation2")
libraries = {
"": SubResource("AnimationLibrary_dg1ca")
}

[node name="prosecutor-bench" type="TextureRect" parent="pressScene3_5"]
layout_mode = 0
offset_left = -279.0
offset_top = -115.0
offset_right = 1925.0
offset_bottom = 1090.0
texture = ExtResource("4_msb8w")

[node name="defense-bench" type="TextureRect" parent="pressScene3_5"]
layout_mode = 0
offset_left = 6.0
offset_top = -93.0
offset_right = 2146.0
offset_bottom = 1090.0
texture = ExtResource("5_vhx2a")

[node name="witness-stand" type="TextureRect" parent="pressScene3_5"]
layout_mode = 0
offset_left = -122.0
offset_top = -83.0
offset_right = 2055.0
offset_bottom = 1088.0
texture = ExtResource("6_tqgql")

[node name="DialogueBoxButton" type="Button" parent="pressScene3_5"]
layout_mode = 0
offset_left = -1932.0
offset_top = 803.0
offset_right = -1924.0
offset_bottom = 811.0
scale = Vector2(1567.73, 159.941)
theme_override_styles/focus = SubResource("StyleBoxEmpty_g3vyj")

[node name="DialogueBox" type="Polygon2D" parent="pressScene3_5"]
position = Vector2(-9, 0)
scale = Vector2(1.02753, 0.99655)
color = Color(0.168627, 0.168627, 0.168627, 0.470588)
polygon = PackedVector2Array(3, 803, 1951, 803, 1951, 1123, 3, 1123)

[node name="PersonNameBox" type="Polygon2D" parent="pressScene3_5"]
position = Vector2(145, 763)
scale = Vector2(0.807388, 0.375424)
color = Color(0.48825, 0.315, 0.7, 0.917647)
polygon = PackedVector2Array(-0.199969, 1.66217, 1.67047, -2.6637, 310.698, -2.6637, 365.822, 98.5553, 306.562, 188.651, 152.066, 188.651, -0.973211, 188.651, -60.1351, 90.5643)

[node name="DialogueText" type="Label" parent="pressScene3_5"]
layout_mode = 0
offset_left = 219.0
offset_top = 858.0
offset_right = 667.0
offset_bottom = 924.0
scale = Vector2(3.32776, 3.02778)
theme_override_fonts/font = ExtResource("7_aavx3")
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="PersonNameText" type="Label" parent="pressScene3_5"]
layout_mode = 0
offset_left = 160.0
offset_top = 780.0
offset_right = 254.0
offset_bottom = 801.0
scale = Vector2(2.31653, 2.09949)
theme_override_fonts/font = ExtResource("7_aavx3")
metadata/_edit_use_anchors_ = true

[node name="CourtRecordButton" type="Button" parent="pressScene3_5"]
layout_mode = 0
offset_left = 1478.0
offset_top = -16.0
offset_right = 1597.0
offset_bottom = 9.0
scale = Vector2(3.82134, 4.93538)
theme_override_fonts/font = ExtResource("7_aavx3")
theme_override_styles/normal = SubResource("StyleBoxTexture_d8jba")
theme_override_styles/hover = SubResource("StyleBoxTexture_esafq")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ov68q")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_nm04d")
theme_override_styles/focus = SubResource("StyleBoxEmpty_5owbm")

[node name="CourtRecordText" type="Label" parent="pressScene3_5/CourtRecordButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.097823
anchor_top = -0.0529059
anchor_right = 0.0978255
anchor_bottom = -0.0529059
offset_left = 15.8363
offset_top = 9.22477
offset_right = 126.836
offset_bottom = 30.2248
scale = Vector2(0.689314, 0.523945)
theme_override_fonts/font = ExtResource("7_aavx3")
text = "Court Record"
metadata/_edit_use_anchors_ = true

[node name="Inventory_UI" parent="pressScene3_5" instance=ExtResource("9_qlslb")]
visible = false

[node name="blip" type="AudioStreamPlayer2D" parent="pressScene3_5"]
stream = ExtResource("10_6vu7c")
volume_db = 6.559

[node name="typewrite" type="AudioStreamPlayer2D" parent="pressScene3_5"]
stream = ExtResource("11_ret3y")
volume_db = 5.943

[node name="bang" type="AudioStreamPlayer2D" parent="pressScene3_5"]
stream = ExtResource("15_flbfp")
volume_db = 19.86
